--- a/templates/edit.html
+++ b/templates/edit.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>{{ handler }} bearbeiten</title>
-		<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
+		<link rel="stylesheet" href="../static/toastr.min.css">
+		<link rel="stylesheet" href="../static/style.css">
 	</head>
 	<body>
 		<h1>Tabelle: {{ handler }}</h1>
@@ -37,14 +38,14 @@
 						<form method="POST" id="form-{{ row.to_dict()['id'] }}" class="inline">
 							<input type="hidden" name="id" value="{{ row.to_dict()['id'] }}" />
 							<input type="hidden" name="delete" value="0" />
-							<input type="submit" value="Speichern" />
+							<input class="save-new" type="submit" value="Speichern" />
 						</form>
 					</td>
 					<td>
 						<form method="POST" id="form-del-{{ row.to_dict()['id'] }}" class="inline" onsubmit="return confirm('Wirklich löschen?');">
 							<input type="hidden" name="id" value="{{ row.to_dict()['id'] }}" />
 							<input type="hidden" name="delete" value="1" />
-							<input type="submit" value="✖" title="Löschen" />
+							<input class="delete-entry" type="submit" value="✖" title="Löschen" />
 						</form>
 					</td>
 				</tr>
@@ -62,7 +63,7 @@
 							{% endif %}
 						</td>
 						{% endfor %}
-						<td><input type="submit" value="Neu speichern" /></td>
+						<td><input class="save-new" type="submit" value="Neu speichern" /></td>
 						<td>&mdash;</td>
 					</form>
 				</tr>
