--- a/templates/edit.html
+++ b/templates/edit.html
@@ -8,6 +8,7 @@
 	</head>
 	<body>
 		<h1>Tabelle: {{ handler }}</h1>
+		<a href="/user_edit/">← zurück</a>
 		{% if message %}
 		<p class="message">{{ message }}</p>
 		{% endif %}
