--- a/Test/templates/index.html
+++ b/Test/templates/index.html
@@ -45,6 +45,14 @@
   <button id="confirmAddBtn">✔ Hinzufügen</button>
 </div>
 
+<div id="objectForm">
+  <label>Option 1:<br><input type="text" id="option1"></label><br>
+  <label>Option 2:<br><input type="text" id="option2"></label><br>
+  <label>Option 3:<br><input type="text" id="option3"></label><br>
+  <label>Option 4:<br><input type="text" id="option4"></label><br>
+  <button id="saveOptionsBtn">Speichern</button>
+</div>
+
 <div id="viewport">
   <div id="floorplan" style="background: url('static/sechste_etage.png'); width: 5733px; height: 916px"></div>
 </div>
