--- a/Test/templates/map_editor.html
+++ b/Test/templates/map_editor.html
@@ -11,16 +11,6 @@
 </head>
 <body>
 
-<div id="controls">
-  <button id="draw-room-btn">Raum zeichnen</button>
-  <button id="draw-snapzone-btn" disabled>Snapzone zeichnen</button>
-  <select id="snapzone-type-select" disabled>
-    <option value="laptop">Laptop</option>
-    <option value="stuhl">Stuhl</option>
-    <option value="tisch">Tisch</option>
-  </select>
-  <button id="cancel-draw-btn" disabled>Abbrechen</button>
-</div>
 
 
   <div id="containerContainer">
@@ -49,58 +39,14 @@
     "x": 27,
     "y": 45,
     "width": 276,
-    "height": 353,
-    "snapzones": [
-      {
-        "type": "laptop",
-        "x": 78,
-        "y": 110,
-        "width": 98,
-        "height": 90,
-        "id": "snapzone1"
-      },
-      {
-        "type": "tisch",
-        "x": 189,
-        "y": 31,
-        "width": 54,
-        "height": 40,
-        "id": "snapzone2"
-      },
-      {
-        "type": "stuhl",
-        "x": 90,
-        "y": 258,
-        "width": 100,
-        "height": 59,
-        "id": "snapzone3"
-      }
-    ]
+    "height": 353
   },
   {
     "name": "",
     "x": 312,
     "y": 45,
     "width": 133,
-    "height": 353,
-    "snapzones": [
-      {
-        "type": "stuhl",
-        "x": 35,
-        "y": 101,
-        "width": 53,
-        "height": 95,
-        "id": "snapzone2"
-      },
-      {
-        "type": "laptop",
-        "x": 21,
-        "y": 223,
-        "width": 79,
-        "height": 79,
-        "id": "snapzone1"
-      }
-    ]
+    "height": 353
   }
 ]
 </textarea>
